k3s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churnguard-api
  namespace: churnguard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churnguard-api
  template:
    metadata:
      labels:
        app: churnguard-api
    spec:
      containers:
        - name: api
          image: lyagoubimohamed/churnguard:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
