k3s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churnguard-api
  namespace: churnguard
spec:
  selector:
    app: churnguard-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
